Set overflow for the left panel to auto, and - for the info panel, shrinked the font size. This fixes the box jitter on node -> slot hover.

--- a/browser/style/flex.css
+++ b/browser/style/flex.css
@@ -49,6 +49,8 @@
 	min-width: 100px;
 	max-width: 160px;
 	height: 100%;
+	overflow: auto;
+	font-size: 12px;
 }
 
 .right-pane {
